# SeiraiPresentationAssistant

./: .gitignore  README.md  build_nuitka.py  build_pyinstaller.py  config.json  crash_handler.py  install_deps.bat  main.py  pyproject.toml  requirements.txt  settings.json  version.json
.github/workflows/: nightly-release.yml
config/: config.json  version.json
controllers/: business_logic.py  ppt_client.py  ppt_core.py  sound_manager.py  version_manager.py
plugins/: webview_runner.py  webview_runner_backup.py
plugins/builtins/app_launcher/: manifest.json  plugin.py
plugins/builtins/settings/: plugin.py  settings.html
plugins/builtins/timer/: plugin.py  timer.html
ppt_assistant/core/: config.py  i18n.py  ppt_monitor.py  theme_data.py
ppt_assistant/ui/: dialog.html  overlay.py  tray.py
tests/: test_basic.py  verify_fixes.py
ui/: about_page.py  custom_settings.py  detached_flyout.py  overlay_window.py  settings_window.py  visual_settings.py  widgets.py
ui/settings/: custom_settings.py  settings_window.py
