[project]
name = "kazuha"
version = "1.0.0"
description = "Kazuha PPT Helper"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "packaging>=25.0",
    "psutil>=7.1.3",
    "pyqt6>=6.10.1",
    "pyqt6-fluent-widgets>=1.10.4",
    "pywin32>=311",
    "requests>=2.32.5",
    "semver>=3.0.4",
]
